# order-service/api/handlers/create_order.go
@@ -1,0 +1,34 @@
+package handlers
+
+import (
+	"github.com/GOAT-prod/goatcontext"
+	"github.com/GOAT-prod/goathttp/json"
+	goathttp "github.com/GOAT-prod/goathttp/server"
+	"github.com/GOAT-prod/goatlogger"
+	"net/http"
+	"order-service/service"
+)
+
+func CreateOrderHandler(logger goatlogger.Logger, orderService service.Order) goathttp.Handler {
+	return func(w http.ResponseWriter, r *http.Request) {
+		ctx, err := goatcontext.New(r)
+		if err != nil || !ctx.IsAuthorized() {
+			w.WriteHeader(http.StatusForbidden)
+			logger.Error(err.Error())
+			return
+		}
+
+		var cartItemIds []int
+		if err = json.ReadRequest(r, &cartItemIds); err != nil {
+			w.WriteHeader(http.StatusBadRequest)
+			logger.Error(err.Error())
+			return
+		}
+
+		if err = orderService.Order(ctx, cartItemIds); err != nil {
+			w.WriteHeader(http.StatusBadRequest)
+			logger.Error(err.Error())
+			return
+		}
+	}
+}
